--- a/user/portal.html
+++ b/user/portal.html
@@ -108,7 +108,7 @@
       padding: 0 24px;
     }
 
-    /* NEW: layout to hold current form + previous case sidebar */
+    /* Layout: current form + previous case sidebar */
     .layout {
       display: flex;
       gap: 16px;
@@ -127,7 +127,7 @@
       overflow: hidden;
     }
 
-    /* NEW: sidebar card for previous case */
+    /* Previous Case Sidebar */
     .side-card {
       flex: 1;
       background: #ffffff;
@@ -914,36 +914,34 @@
         </div>
       </div>
 
-      <!-- Previous Case Sidebar -->
-      <aside class="side-card">
+      <!-- Previous Case Sidebar (dynamic) -->
+      <aside class="side-card" id="prev-case-card">
         <div class="side-title">Previous Case</div>
         <div class="side-sub">Overview of your last submitted case</div>
 
         <div class="side-row">
           <span class="side-label">Case ID</span>
-          <span class="side-value">CASE-LM-2024-8423</span>
+          <span class="side-value" id="prev-case-id">Not available</span>
         </div>
 
         <div class="side-row">
           <span class="side-label">Status</span>
-          <!-- change status-open to status-closed if needed -->
-          <span class="status-pill status-open">In Review</span>
+          <span class="status-pill status-open" id="prev-case-status">No previous case</span>
         </div>
 
         <div class="side-row">
           <span class="side-label">Fees</span>
-          <!-- toggle between status-paid / status-unpaid -->
-          <span class="status-pill status-paid">Fees Paid</span>
+          <span class="status-pill status-unpaid" id="prev-case-fees">Unknown</span>
         </div>
 
         <div class="side-row">
           <span class="side-label">Last Updated</span>
-          <span class="side-value">2 days ago</span>
+          <span class="side-value" id="prev-case-time">—</span>
         </div>
 
         <div class="side-divider"></div>
         <div class="side-note">
-          This information is only visible to you. You can quote the Case ID above if you contact support about your previous matter.
+          This information updates automatically when you submit a new case. It is only visible to you.
         </div>
       </aside>
     </div>
@@ -970,67 +968,111 @@
   </div>
 
   <script>
+    // Load previous case from localStorage when page loads
+    window.addEventListener("load", () => {
+      const prevCase = JSON.parse(localStorage.getItem("previousCase"));
+      if (prevCase) {
+        updatePreviousCaseUI(prevCase);
+      }
+    });
+
     // Category selection
-    document.querySelectorAll('.category-card').forEach(card => {
-      card.addEventListener('click', function() {
-        document.querySelectorAll('.category-card').forEach(c => c.classList.remove('selected'));
-        this.classList.add('selected');
+    document.querySelectorAll(".category-card").forEach(card => {
+      card.addEventListener("click", function() {
+        document.querySelectorAll(".category-card").forEach(c => c.classList.remove("selected"));
+        this.classList.add("selected");
       });
     });
 
     // Input mode selection
-    document.querySelectorAll('.mode-btn').forEach(btn => {
-      btn.addEventListener('click', function() {
+    document.querySelectorAll(".mode-btn").forEach(btn => {
+      btn.addEventListener("click", function() {
         const mode = this.dataset.mode;
 
-        document.querySelectorAll('.mode-btn').forEach(b => b.classList.remove('active'));
-        this.classList.add('active');
+        // Update button states
+        document.querySelectorAll(".mode-btn").forEach(b => b.classList.remove("active"));
+        this.classList.add("active");
 
-        document.getElementById('text-input').style.display = mode === 'text' ? 'block' : 'none';
-        document.getElementById('voice-input').classList.toggle('active', mode === 'voice');
-        document.getElementById('video-input').classList.toggle('active', mode === 'video');
+        // Show/hide input areas
+        document.getElementById("text-input").style.display = mode === "text" ? "block" : "none";
+        document.getElementById("voice-input").classList.toggle("active", mode === "voice");
+        document.getElementById("video-input").classList.toggle("active", mode === "video");
       });
     });
 
     // Character counter
-    const textarea = document.getElementById('case-description');
-    const counter = document.getElementById('char-counter');
+    const textarea = document.getElementById("case-description");
+    const counter = document.getElementById("char-counter");
 
-    textarea.addEventListener('input', () => {
+    textarea.addEventListener("input", () => {
       const length = textarea.value.length;
       counter.textContent = `${length} / 1000 characters`;
     });
 
     // Voice recording (placeholder)
-    document.getElementById('voice-record-btn').addEventListener('click', function() {
-      if (this.textContent === 'Start Recording') {
-        this.textContent = 'Stop Recording';
-        this.classList.add('recording');
+    document.getElementById("voice-record-btn").addEventListener("click", function() {
+      if (this.textContent === "Start Recording") {
+        this.textContent = "Stop Recording";
+        this.classList.add("recording");
+        // Add actual recording logic here
       } else {
-        this.textContent = 'Start Recording';
-        this.classList.remove('recording');
+        this.textContent = "Start Recording";
+        this.classList.remove("recording");
+        // Stop recording logic here
       }
     });
 
     // Video recording (placeholder)
-    document.getElementById('video-record-btn').addEventListener('click', function() {
-      if (this.textContent === 'Start Recording') {
-        this.textContent = 'Stop Recording';
-        this.classList.add('recording');
+    document.getElementById("video-record-btn").addEventListener("click", function() {
+      if (this.textContent === "Start Recording") {
+        this.textContent = "Stop Recording";
+        this.classList.add("recording");
+        // Add actual recording logic here
       } else {
-        this.textContent = 'Start Recording';
-        this.classList.remove('recording');
+        this.textContent = "Start Recording";
+        this.classList.remove("recording");
+        // Stop recording logic here
       }
     });
 
-    // Submit case
+    // Submit case: create fake case, store as previous, update sidebar, show modal
     function submitCase() {
-      document.getElementById('success-modal').classList.add('active');
+      const newCase = {
+        id: "CASE-LM-" + Math.floor(1000 + Math.random() * 90000),
+        status: "In Review",
+        fees: Math.random() > 0.5 ? "Paid" : "Pending",
+        time: new Date().toLocaleString()
+      };
+
+      // Save to localStorage
+      localStorage.setItem("previousCase", JSON.stringify(newCase));
+
+      // Update sidebar
+      updatePreviousCaseUI(newCase);
+
+      // Update modal Case ID and show modal
+      document.querySelector(".case-id-value").textContent = newCase.id;
+      document.getElementById("success-modal").classList.add("active");
     }
 
-    // Close modal
+    function updatePreviousCaseUI(caseData) {
+      document.getElementById("prev-case-id").textContent = caseData.id;
+      document.getElementById("prev-case-status").textContent = caseData.status;
+      document.getElementById("prev-case-fees").textContent =
+        caseData.fees === "Paid" ? "Fees Paid" : "Fees Pending";
+      document.getElementById("prev-case-time").textContent = caseData.time;
+
+      // Update status badge class
+      document.getElementById("prev-case-status").className =
+        "status-pill " + (caseData.status === "In Review" ? "status-open" : "status-closed");
+
+      // Update fees badge class
+      document.getElementById("prev-case-fees").className =
+        "status-pill " + (caseData.fees === "Paid" ? "status-paid" : "status-unpaid");
+    }
+
     function closeModal() {
-      document.getElementById('success-modal').classList.remove('active');
+      document.getElementById("success-modal").classList.remove("active");
     }
   </script>
 </body>
