--- a/student/exam.html
+++ b/student/exam.html
@@ -498,7 +498,7 @@ function handleDisqualify(reason){
   } catch(e){}
 
   setTimeout(()=> {
-    window.location.href = '/student/dashboard';
+    window.location.href = './dashboard.html';
   }, 3500);
 }
 
