Add Open Case File modal + moderation

--- a/student/dashboard.html
+++ b/student/dashboard.html
@@ -124,7 +124,7 @@
         <input type="text" placeholder="Search cases, students, categories...">
       </div>
       <div class="nav-actions">
-        <button class="nav-btn">📊 Stats</button>
+        <a href = './reviewer.html'><button class="nav-btn">📊 Reviews</button></a>
         <button class="nav-btn">🔔 Alerts</button>
       </div>
     </div>
