--- a/lawyer/lawyer.html
+++ b/lawyer/lawyer.html
@@ -180,7 +180,7 @@
     </aside>
 </div>
 
-<div class="modal-overlay" id="lawyer-modal">
+<div class="modal-overlay" id="lawyer-modal" style="display:none;">
     <div class="modal-container">
         <button class="btn-close" onclick="closeModal()">×</button>
         
