legal aid to legal minds

--- a/student/dashboard.html
+++ b/student/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Student Dashboard - Legal Aid Platform</title>
+  <title>Student Dashboard - Legal Minds Platform</title>
 <style>
   * { margin: 0; padding: 0; box-sizing: border-box; }
   body {
@@ -118,7 +118,7 @@
     <div class="nav-content">
       <a href="../index.html" class="logo">
         <span>⚖️</span>
-        <span>LegalAid</span>
+        <span>Legal Minds</span>
       </a>
       <div class="search-bar">
         <input type="text" placeholder="Search cases, students, categories...">
